<resources>
    <string name="app_name">HSM</string>
    <string name="add_card_activity_name">Nome Completo *</string>
	<string name="add_card_activity_email">E-mail *</string>
	<string name="add_card_activity_phone">Telefone *</string>
	<string name="add_card_activity_mobile">Celular *</string>
	<string name="add_card_activity_company">Empresa *</string>
	<string name="add_card_activity_role">Cargo *</string>
	<string name="add_card_activity_website">Site *</string>
	<string name="add_card_activity_button">Criar</string>
    <string name="add_card_activity_name_empty">Por favor, preencha seu name.</string>
	<string name="add_card_activity_email_empty">Por favor, insira um e-mail válido.</string>
	<string name="add_card_activity_phone_empty">Por favor, insira um telefone válido.</string>
	<string name="add_card_activity_mobile_empty">Por favor, insira um celular válido.</string>
	<string name="add_card_activity_company_empty">Por favor, insira uma empresa válida.</string>
	<string name="add_card_activity_role_empty">Por favor, insira um cargo válido.</string>
	<string name="add_card_activity_website_empty">Por favor, insira um website válida.</string>
    <string name="agenda_adapter_start_time">11h00</string>
    <string name="agenda_adapter_end_time">12h00</string>
    <string name="agenda_adapter_panelist_name">Nome do Palestrante</string>
    <string name="agenda_adapter_lecture_type">Tipo de Palestra</string>
    <string name="banner_fragment_empty">"Erro ao abrir o link, por favor tentar mais tarde."</string>
    <string name="book_details_activity_title">TÍTULO DO LIVRO</string>
	<string name="book_details_activity_purchase">Comprar</string>
	<string name="book_details_activity_sinopse">SINOPSE  |</string>
	<string name="book_details_activity_author">AUTOR</string>
	<string name="book_details_activity_description">Descrição do Livro</string>
	<string name="book_details_activity_author_name">Nome do Autor</string>
	<string name="book_details_activity_author_description">Descrição do Autor</string>
	<string name="adapter_book_name">Nome do Livro</string>
	<string name="adapter_book_edition">Edição do Livro</string>
    <string name="break_adapter_start_time">12h00</string>
    <string name="break_adapter_end_time">12h00</string>
    <string name="break_adapter_description">Break</string>
	<string name="contact_activity_name">Nome</string>
	<string name="contact_activity_email">E-mail</string>
	<string name="contact_activity_send_email">Enviar e-mail</string>
    <string name="contact_activity_email_issue">Você não possui cliente de email instalado.</string>
	<string name="event_details_activity_about">Sobre o evento</string>
	<string name="event_details_activity_info">Infos Gerais</string>
    <string name="event_details_activity_title">Título.</string>
    <string name="event_details_activity_description">Descrição do evento. Descrição do evento. Descrição do evento. Descrição do evento. Descrição do evento.</string>
    <string name="event_details_activity_time">Horário: </string>
    <string name="event_details_activity_local">Local: </string>
    <string name="event_details_activity_agenda">Agenda</string>
    <string name="event_details_activity_panelists">Palestrantes</string>
    <string name="event_details_activity_passes">Passes</string>
    <string name="adapter_event_item_title">Título</string>
    <string name="adapter_event_item_subtitle">Subtítulo</string>
    <string name="adapter_event_item_date">30 e 31 Dez</string>
    <string name="adapter_event_item_address">WTC Torre Empresarial</string>
	<string name="greetings_activity_thanks">OBRIGADO!</string>
	<string name="greetings_activity_purchase_success">Sua solicitação de compra dos passes foi realizada com sucesso.</string>
	<string name="greetings_activity_consultors">Aguarde um de nossos consultores entrar em contato para confirmar os dados e finalizar a compra.</string>
	<string name="greetings_activity_back">Voltar</string>
	<string name="home_activity_unavailable">Conteúdo Indisponível</string>
    <string name="home_activity_available_soon">Disponível em breve.</string>
    <string name="lecture_details_activity_panelist_name">NOME PALESTRANTE</string>
    <string name="lecture_details_activity_specialty">ESPECIALIDADE</string>
    <string name="lecture_details_activity_date">31 Dez</string>
    <string name="lecture_details_activity_time">10h - 10h</string>
    <string name="lecture_details_activity_lecture_abstract">Resumo da Palestra Atual</string>
    <string name="lecture_details_activity_lecture_content">Detalhes da Palestra Atual</string>
    <string name="lecture_details_activity_schedule">Agendar</string>
	<string name="lecture_details_activity_title_unavailable">Sem Título *</string>
    <string name="lecture_details_activity_panelist_unassociated_event">Palestrante não associado à Evento.</string>
    <string name="magazine_activity_sign_now">ASSINE AGORA</string>
    <string name="magazine_adapter_title">TÍTULO</string>
    <string name="magazine_adapter_description">DESCRIÇÃO</string>
    <string name="magazine_adapter_see_more">VER MAIS</string>
    <string name="networking_list_activity_create_card">Criar meu cartão</string>
    <string name="networking_list_activity_qrcode_error">"Ocorreu um erro na leitura do QRCode, por favor tente novamente."</string>
    <string name="networking_list_activity_qrcode_canceled">"Leitura de QRCode cancelada."</string>
    <string name="networking_list_activity_existent_contact">"Você já possui um contato com este nome e e-mail."</string>
    <string name="networking_adapter_name">NOME DO AMIGO</string>
    <string name="panelist_adapter_name">Nome do Palestrante</string>
    <string name="participant_activity_complete_name_hint">Nome Completo</string>
    <string name="participant_activity_email_hint">E-mail</string>
    <string name="participant_activity_cpf_hint">Hint</string>
    <string name="participant_activity_company_hint">Empresa</string>
    <string name="participant_activity_role_hint">Cargo</string>
    <string name="participant_activity_confirm">Confirmar</string>
    <string name="participant_activity_error">Favor informar os campos de forma correta.</string>
    <string name="passes_activity_hint">Ao comprar pelo aplicativo oficial da HSM, você tem um desconto exclusivo em qualquer um dos passes.</string>
    <string name="passes_adapter_inscription">Inscrições</string>
    <string name="passes_adapter_title">TÍTULO DO PACOTE</string>
    <string name="passes_adapter_validity">Validade</string>
    <string name="passes_adapter_normal_price">Preço Normal:\nR$ X.XXX,00</string>
    <string name="passes_adapter_new_price">Preço Novo:\nR$ X.XXX,00</string>
    <string name="passes_adapter_title_empty">Cadastrar Título *</string>
    <string name="passes_adapter_validity_empty">Cadastrar Validade *</string>
    <string name="passes_adapter_normal_price_empty">Cadastrar Preço Antigo *</string>
    <string name="passes_adapter_new_price_empty">Cadastrar Preço Novo *</string>
    <string name="payment_activity_single_pass">Passe Single</string>
    <string name="payment_activity_choose_day">ESCOLHA UM DIA</string>
    <string name="payment_activity_participant">PARTICIPANTE</string>
    <string name="payment_activity_register">Cadastrar</string>
    <string name="payment_activity_purchase">Comprar</string>
    <string name="payment_activity_invalid_data">Cadastro com dados inválidos.</string>
    <string name="output_file">Log.txt</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home"></string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="title_activity_detalhe_palestra">Detalhe da Palestra</string>
    <string name="title_activity_pacote">Passes</string>
    <string name="title_activity_pagamento">Pagamento</string>
    <string name="title_activity_agradecimento">Obrigado</string>
    <string name="title_activity_agenda_adapter">AgendaAdapter</string>
    <string name="title_activity_detalhe_evento">Auditório Principal</string>
    <string name="title_activity_pacote_adapter">PacoteAdapter</string>
    <string name="tipoPagamento">Escolha forma pagamento</string>
    <string name="quantidade">Escolha a quantidade</string>
    <string name="title_activity_menu_lateral">Menu</string>
    <string name="title_activity_splash_screen2">SplashScreen2</string>
    <string name="comprar">Comprar</string>
    <string name="title_activity_break_adapter">BreakAdapter</string>
    <string name="participante">Participante</string>
    <string name="drawer_open">Abrir menu</string>
    <string name="drawer_close">Fechar menu</string>
    <string name="title_activity_participante">Participante</string>
    <string name="pronto">Pronto</string>
    <string name="title_activity_eventos">Eventos</string>
    <string name="title_activity_lista_audutorios">Auditórios</string>
    <string name="title_activity_auditorios">Auditórios</string>
    <string name="title_activity_estacao_conhecimento">Estações do Conhecimento</string>
    <string name="title_activity_informativo">Página de Texto</string>
    <string name="title_activity_simples_adapter">SimplesAdapter</string>
    <string name="title_activity_mostra_conteudo">Mostra de Conteúdos</string>
    <string name="title_activity_bdw">Brasil Design Week</string>
    <string name="title_activity_bdwmais_informacoes">Mais Informações</string>
    <string name="title_activity_bdwagenda">Agenda</string>
    <string name="title_activity_palestrantes">Palestrantes</string>
    <string name="title_activity_palestrante_adapter">PalestranteAdapter</string>
    <string name="title_activity_banner_fragment">BannerFragment</string>
    <string name="title_activity_lista_networking">Networking</string>
    <string name="title_activity_amigo_adapter">AmigoAdapter</string>
    <string name="title_activity_meu_cartao">Criar meu cartão</string>
    <string name="title_activity_contato">Contato</string>
    <string name="title_activity_qrcode">QRCodeActivity</string>
    <string name="title_activity_lista_livros">Livros</string>
    <string name="title_activity_detalhe_livro">Livro</string>
    <string name="title_activity_eventos_nova">Eventos</string>
    <string name="title_activity_revista">Revistas</string>
    <string name="title_activity_detalhe_evento_neo"></string>
    <string name="title_activity_detalhe_palestra_neo">DetalhePalestraNeoActivity</string>
    <string name="title_activity_livros_adapter">LivrosAdapter</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_yes">Sim</string>
    <string name="dialog_no">Não</string>
    <string name="error_title_bad_request">Erro no servidor</string>
	<string name="error_msg_bad_request">Aguarde e tente novamente.</string>
	<string name="error_title_no_internet">Sem conexão</string>
	<string name="error_msg_no_internet">Confirme sua conexão com a internet e tente novamente.</string>
	<string name="error_title_server">Erro no servidor</string>
	<string name="error_msg_server">Desculpe, ocorreu um erro no servidor. Por favor, tente novamente em alguns minutos.</string>
	<string name="error_title_connection">Erro de conexão</string>
	<string name="error_msg_connection">Desculpe, nossos servidores estão ocupados. Aguarde um pouco e tente novamente.</string>
	<string name="error_title_unknown">Erro</string>
	<string name="error_msg_unknown">Ocorreu um erro desconhecido. Tente novamente.</string>
	<string name="error_title_cache_generation">Servidores ocupados</string>
	<string name="error_msg_cache_generation">Desculpe pela incoveniência. Por favor, tente novamente em alguns minutos.</string>
	<string name="error_title_no_wifi_or_gps">Localização não encontrada</string>
</resources>