<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hsm_color_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <!-- Picture -->
        <ImageView
            android:id="@+id/id_panelist_image_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/hsm_placeholder_small" />

        <!-- Info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/id_panelist_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lecture_details_activity_panelist_name"
                android:textColor="@color/hsm_color_gray_light"
                android:textSize="14dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/id_specialty_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/lecture_details_activity_specialty"
                android:textColor="@color/hsm_color_yellow" />
            <TextView
                android:id="@+id/id_date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/lecture_details_activity_date"
                android:textColor="@color/hsm_color_gray_light" />
            <TextView
                android:id="@+id/id_time_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/lecture_details_activity_time"
                android:textColor="@color/hsm_color_gray_light" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/id_abstract_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:minLines="2"
        android:padding="5dp"
        android:text="@string/lecture_details_activity_lecture_abstract"
        android:textAlignment="center"
        android:textColor="@color/hsm_color_white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3" >

        <TextView
            android:id="@+id/id_content_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:padding="5dp"
            android:paddingTop="70dp"
            android:text="@string/lecture_details_activity_lecture_content"
            android:textColor="@color/hsm_color_white" />
    </ScrollView>

    <Button
        android:id="@+id/id_schedule_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center|bottom"
        android:layout_margin="10dp"
        android:background="@drawable/button_background_behavior"
        android:textColor="@color/hsm_color_white"
        android:text="@string/lecture_details_activity_schedule" />
</LinearLayout>