<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hsm_color_background" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
		android:padding="16dp" >

	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:src="@drawable/hsm_passe_done" />
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="20dp"
	        android:textColor="@color/hsm_color_gray_break_text"
	        android:textSize="22dp"
	        android:text="@string/greetings_activity_thanks"/>
		
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="20dp"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
	        android:textColor="@color/hsm_color_white"
	        android:text="@string/greetings_activity_purchase_success"/>
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:textAlignment="center"
	        android:layout_marginTop="30dp"
			android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
	        android:layout_marginBottom="50dp"
	        android:textColor="@color/hsm_color_gray_break_text"
	        android:maxLines="4"
	        android:text="@string/greetings_activity_consultors"/>
	
	    <Button 
	        android:id="@+id/id_back_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:layout_gravity="center_horizontal"
	        android:textColor="@color/hsm_color_white"
	        android:background="@drawable/button_passe_background_behavior"
	        android:text="@string/greetings_activity_back" />
	</LinearLayout>
</ScrollView>