<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@color/hsm_color_background"
    android:orientation="horizontal" >
    
	<ImageView 
	    android:id="@+id/id_magazine_image_view"
	    android:layout_width="100dp"
	    android:layout_height="100dp"
	    android:layout_margin="10dp"
	    android:adjustViewBounds="true"
	    android:src="@drawable/hsm_placeholder_book"/>
	
	<LinearLayout 
	    android:layout_width="80dp"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:orientation="vertical">
	    
	    <TextView 
	        android:id="@+id/id_magazine_title_text_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/hsm_color_gray_light"
	        android:textStyle="bold"
	        android:layout_marginTop="30dp"
	        android:text="@string/magazine_adapter_title"/>
	    <TextView 
	        android:id="@+id/id_magazine_description_text_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/hsm_color_gray_light"
	        android:maxLines="2"
	        android:textSize="12dp"
	        android:text="@string/magazine_adapter_description"/>
	</LinearLayout>
	
	<Button 
	    android:id="@+id/id_magazine_plus_button"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="40dp"
	    android:layout_marginLeft="30dp"
	    android:layout_marginRight="20dp"
	    android:textColor="@color/hsm_color_white"
	    android:textSize="12dp"
	    android:focusable="false"
	    android:background="@drawable/button_background_behavior"
	    android:text="@string/magazine_adapter_see_more"/>
</LinearLayout>