<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/hsm_bg_c_blur"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >
        <ImageView
            android:id="@+id/imgPagamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/hsm_passes_title_red" />
    </FrameLayout>

    <TextView
        android:id="@+id/lbDias"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="25dp"
        android:paddingLeft="22dp"
        android:text="ESCOLHA UM DIA"
        android:textColor="#535361"
        android:textSize="20dp"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/spinerQuantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/quantidadeArray"
        android:prompt="@string/quantidade"
        android:textColor="#535361"
        android:visibility="gone" >
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:paddingLeft="22dp"
        android:text="FORMA DE PAGAMENTO"
        android:textColor="#535361"
        android:textSize="20dp" />

    <Spinner
        android:id="@+id/spinerTipoPagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/tipoPagamentoArray"
        android:prompt="@string/tipoPagamento" >
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:paddingLeft="22dp"
        android:text="PARTICIPANTE"
        android:textColor="#535361"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnParticipante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_background_behavior"
        android:text="@string/cadastrar"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:background="@drawable/button_payment_background_behavior"
        android:text="@string/comprar"
        android:textColor="#FFFFFF" />
</LinearLayout>